tests/ui/abi/cannot-be-coroutine.avr.stderr
error: functions with the "avr-interrupt" ABI cannot be `async`
  --> $DIR/cannot-be-coroutine.rs:36:1
   |
LL | async extern "avr-interrupt" fn avr() {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: remove the `async` keyword from this definition
   |
LL - async extern "avr-interrupt" fn avr() {
LL + extern "avr-interrupt" fn avr() {
   |

error: requires `ResumeTy` lang_item
  --> $DIR/cannot-be-coroutine.rs:32:19
   |
LL |   async fn vanilla(){
   |  ___________________^
LL | |
LL | | }
   | |_^

error: aborting due to 2 previous errors

